Add Terminal Session Logging document

--- a/WSL.html
+++ b/WSL.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-04-03 Fri 23:24 -->
+<!-- 2020-04-04 Sat 21:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Windows Subsystem for Linux</title>
@@ -221,6 +221,10 @@ Hyper <a href="https://hyper.is/">https://hyper.is/</a>
 <div class="outline-text-2" id="text-6">
 <p>
 <a href="./WSL-with-GUI.html">WSL with GUI</a>
+</p>
+
+<p>
+<a href="./Terminal-Session-Logging.html">Terminal Session Logging</a>
 </p>
 </div>
 </div>
